--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     </header>
     <main>
+      <div class="main-wrapper">
+
+
       <div class="header-title">
           <h1>Get <span class="purple">insights</span> that help your business grow.</h1>
       </div>
@@ -35,7 +38,7 @@
         <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
         experience, and overall efficiency.</p>
       </div>
-
+</div>
       <div class="header-bottom">
         <div class="box">
           <span class="bigger">  10k+ </span>
@@ -63,8 +66,8 @@
 
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io/solutions/css-flex-box-GosJwxRTFp" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Lee Cockcroft</a>.
   </div>
 </body>
 </html>
