--- a/index.html
+++ b/index.html
@@ -1,177 +1,73 @@
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap" rel="stylesheet">
+  <title>Frontend Mentor | Stats preview card component</title>
 
-html {
-  font-size:62.5%;
-}
-.wrapper{
-  max-width:375px;
-  margin:auto;
-}
-.container{
-  padding: 8.8rem 2.4rem 0 2.4rem;
-
-border-radius: .8rem;
-background: #1B1937;
-box-shadow: 0px 2.0rem 2rem -1.0rem rgba(23, 25, 41, 0.20);
-}
-
-header{
-  background: url(./images/image-header-mobile.jpg);
-  background-size: cover;
-position:relative;
-  min-height: 34.6rem;
-}
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
+</head>
+<body>
+  <div class="wrapper">
+  <div class="container">
 
 
-.box {
-      align-items: flex-start;
-}
-header:before{
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: hsl(277, 64%, 80%);
-  opacity: 0.7511;
-  mix-blend-mode: multiply;
-  top:0;
-  left:0;
-}
-main {
-padding-bottom:6.4rem;
-}
+    <header>
 
-header{
+    </header>
+    <main>
+      <div class="main-wrapper">
 
 
-  text-align: center;
-}
-.header-title h1 {
-  font-size:2.8rem;
-  font-family:"Inter";
-  font-style: normal;
-font-weight: 700;
+      <div class="header-title">
+          <h1>Get <span class="purple">insights</span> that help your business grow.</h1>
+      </div>
+      <div class="header-text">
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+        experience, and overall efficiency.</p>
+      </div>
+</div>
+      <div class="header-bottom">
+        <div class="box">
+          <span class="bigger">  10k+ </span>
+          <span>     companies</span>
+        </div>
+        <div class="box">
+      <span class="bigger">   314</span>
+    <span>    templates</span>
+        </div>
 
-padding:4rem 3.15rem 1.6rem 3.15rem;
-}
+    <div class="box">
+    <span class="bigger">   12m+ </span>
+    <span>  queries</span>
+    </div>
 
-.header-text p {
-color:hsla(0, 0%, 100%, 0.75);
-font-size: 1.5rem;
-font-style: normal;
-font-weight: 400;
-line-height: 2.5rem; /* 166.667% */
-padding-bottom:4rem;
-}
+      </div>
+    </main>
 
-.header-bottom,.header-text p ,.header-title h1{
-  color: #FFF;
-  text-align: center;
-  font-family: Inter;
-}
+  </div>
 
-.purple {
-  color:hsl(277, 64%, 61%);
-}
-
-.box{
-  display:flex;
-  flex-direction:column;
-  padding-bottom:2.4rem;
-}
-
-.box .bigger{
-  color: #FFF;
-text-align: center;
-font-family: Inter;
-font-size: 2.4rem;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-}
-
-.box span {
-  color:hsla(0, 0%, 100%, 0.75);
-
-text-align: center;
-font-family: Lexend Deca;
-font-size: 1.2rem;
-font-style: normal;
-font-weight: 400;
-line-height: 2.5rem; /* 208.333% */
-letter-spacing: 0.1rem;
-text-transform: uppercase;
-}
-
-@media (min-width:550px){
-
-  body{
-    background: #0A0C1C;
-  }
-  .wrapper{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    max-width:1440px;
-
-  }
-
-  .container{
-    display:flex;
-    padding:0;
-    width: 1110px;
-height: 446px
-  }
-main{
-  width:50%;
-}
-  header{
-
-    order:2;
-    flex:1;
-  }
-
-  .header-title h1 {
-    padding: 7.15rem 9.5rem 0rem 7.15rem;
-    text-align:left;
-    font-size:3.6rem;
+  </div>
 
 
 
-  }
-  .header-text p {
-    text-align:left;
-    padding-left:7.15rem;
-    padding-top:2.5rem;
-padding-right:124px;
-
-    color: #FFF;
-font-family: Inter;
-font-size: 1.5rem
-font-style: normal;
-font-weight: 400;
-line-height: 2.5rem; /* 166.667% */
-  }
-.box:nth-child(1){
-      margin-left: 7.2rem;
-}
-  .header-bottom{
-    display:flex;
 
 
-padding-top: 3.2rem;
-    padding-bottom:5.9rem;
-
-
-  }
-
-  .box:nth-child(2){
-padding: 0 6.05rem 0 6.35rem;
-  }
-
-}
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io/solutions/css-flex-box-GosJwxRTFp" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Lee Cockcroft</a>.
+  </div>
+</body>
+</html>
